k8s/foo.yml
# k8s/foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deployment
  labels:
    app: foo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: hashicorp/http-echo
        args:
        - "-text=Hello from foo"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  selector:
    app: foo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
